objects/UNITY_Vendor_Trade__c.object
<CustomObject>
    <description>UNITY project - Stores vendor trade coverage and attributes at trade level, such as score and price</description>
    <fields>
        <fullName>Price_PM__c</fullName>
        <label>Price PM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Project__c</fullName>
        <label>Price Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_SR__c</fullName>
        <label>Price SR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_SS__c</fullName>
        <label>Price SS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Score_PM__c</fullName>
        <label>Score PM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Project__c</fullName>
        <label>Score Project</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_SR__c</fullName>
        <label>Score SR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_SS__c</fullName>
        <label>Score SS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <label>Trade</label>
        <referenceTo>FSO__Skill__c</referenceTo>
        <relationshipLabel>Vendor Trades</relationshipLabel>
        <relationshipName>Vendor_Trades</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_LastScored_VA__c</fullName>
        <label>Last Scored Vendor Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNITY_LastScored_WA__c</fullName>
        <label>Last Scored Warranty</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNITY_LastScored_WO__c</fullName>
        <label>Last Scored WO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_1_PM__c</fullName>
        <label>Score Factor VA 1 PM</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_1_Project__c</fullName>
        <label>Score Factor VA 1 Project</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_1_SR__c</fullName>
        <label>Score Factor VA 1 SR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_1_SS__c</fullName>
        <label>Score Factor VA 1 SS</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_2_PM__c</fullName>
        <label>Score Factor VA 2 PM</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_2_Project__c</fullName>
        <label>Score Factor VA 2 Project</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_2_SR__c</fullName>
        <label>Score Factor VA 2 SR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_VA_2_SS__c</fullName>
        <label>Score Factor VA 2 SS</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_1_PM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 1 PM</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_1_Project__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 1 Project</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_1_SR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 1 SR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_1_SS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 1 SS</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_2_PM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 2 PM</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_2_Project__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 2 Project</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_2_SR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 2 SR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_2_SS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 2 SS</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_3_PM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 3 PM</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_3_Project__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 3 Project</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_3_SR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 3 SR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Score_Factor_WO_3_SS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score Factor WO 3 SS</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Trade_External_Id__c</fullName>
        <description>This field will contain unique record id from source system.</description>
        <externalId>true</externalId>
        <label>UNITY Vendor Trade External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Vendor at vendor site level</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Trades</relationshipLabel>
        <relationshipName>Vendor_Trades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Trade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Vendor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Trade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VT-{000000000}</displayFormat>
        <label>Vendor Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Trades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>